<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data class="RegisterDataBinding">

        <variable
            name="Register"
            type="com.technologies.pittu.zoloassignment.viewmodel.UserViewModel"/>
    </data>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/themeBlue"
                tools:context="com.technologies.pittu.zoloassignment.view.RegisterActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                    android:id="@+id/headingLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/loginButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:padding="15dp"
                        android:text="@string/login_button_text"
                        android:onClick="onClickLogin"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/loginButton"
                        android:layout_centerHorizontal="true"
                        android:padding="20dp"
                        android:text="@string/zolo"
                        android:textColor="@color/whiteTransaprant"
                        android:textSize="80sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/registerHeading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/loginButton"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="50dp"
                        android:text="@string/register"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/registerHeading"
                        android:layout_centerHorizontal="true"
                        android:text="@string/please_register_text"
                        android:textColor="#daffffff"
                        android:textSize="16sp"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/headingLayout"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/phoneNumberLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/backgroundImageView"
                        android:layout_margin="10dp">

                        <ImageView
                            android:id="@+id/phoneIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/image"
                            android:padding="10dp"
                            android:src="@drawable/ic_phone_white_24dp"/>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_phonenumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_toEndOf="@id/phoneIcon"
                            android:layout_toRightOf="@id/phoneIcon"
                            android:padding="5dp"
                            android:textColorHint="@color/themeYellow">

                            <EditText
                                android:id="@+id/phonenumberEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/white"
                                android:hint="@string/your_phonenumber_hint"
                                android:inputType="phone"
                                android:text="@={Register.userPhoneNumber}"
                                android:textColor="@color/white"
                                android:textSize="17sp"/>

                        </android.support.design.widget.TextInputLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/emailLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/phoneNumberLayout"
                        android:layout_margin="10dp">

                        <ImageView
                            android:id="@+id/emailIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/image"
                            android:padding="10dp"
                            android:src="@drawable/ic_mail_white_24dp"/>

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_toEndOf="@id/emailIcon"
                            android:layout_toRightOf="@id/emailIcon"
                            android:padding="5dp"
                            android:textColorHint="@color/themeYellow">

                            <EditText
                                android:id="@+id/emailEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/white"
                                android:hint="@string/your_email_hint"
                                android:text="@={Register.userEmail}"
                                android:textColor="@color/white"
                                android:textSize="17sp"/>

                        </android.support.design.widget.TextInputLayout>

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/nameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/emailLayout"
                        android:layout_margin="10dp">

                        <ImageView
                            android:id="@+id/subjectIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/image"
                            android:padding="10dp"
                            android:src="@drawable/ic_subject_white_24dp"/>


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_toEndOf="@id/subjectIcon"
                            android:layout_toRightOf="@id/subjectIcon"
                            android:padding="5dp"
                            android:textColorHint="@color/themeYellow">

                            <EditText
                                android:id="@+id/nameEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/white"
                                android:hint="@string/your_name_hint"
                                android:inputType="textPassword"
                                android:text="@={Register.userName}"
                                android:textColor="@color/white"
                                android:textSize="17sp"/>

                        </android.support.design.widget.TextInputLayout>
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/passwordLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/nameLayout"
                        android:layout_margin="10dp">

                        <ImageView
                            android:id="@+id/keyIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/image"
                            android:padding="10dp"
                            android:src="@drawable/ic_vpn_key_white_24dp"/>


                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/input_layout_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_toEndOf="@id/keyIcon"
                            android:layout_toRightOf="@id/keyIcon"
                            android:padding="5dp"
                            android:textColorHint="@color/themeYellow">

                            <EditText
                                android:id="@+id/passwordEditText"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:backgroundTint="@color/white"
                                android:hint="@string/set_password_hint"
                                android:inputType="textPassword"
                                android:text="@={Register.userPassword}"
                                android:textColor="@color/white"
                                android:textSize="17sp"/>

                        </android.support.design.widget.TextInputLayout>
                    </RelativeLayout>

                    <Button
                        android:id="@+id/registerButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/passwordLayout"
                        android:layout_centerHorizontal="true"
                        android:layout_marginBottom="30dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/themeYellow"
                        android:text="@string/register"
                        android:onClick="onClickRegister"
                        android:textColor="@color/black"
                        android:textSize="17sp"/>
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>
</layout>